# ros_vicon_sdk

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: access.launch  viconMe_SUBPUB_topics.yaml
msg/: PointArray.msg
src/: a_viconSDK_node.cpp
src/include/: RosTopicConfigs.hpp  ViconMe.hpp  ViconSDKRosWrapper.hpp  essential.h
